修复404页面手机显示问题

--- a/src/styles/mobile.scss
+++ b/src/styles/mobile.scss
@@ -1,5 +1,26 @@
 @media screen and (max-width: 768px) {
-	.el-dialog {
-		--el-dialog-width: 94% !important;
-	}
+
+  /* 弹窗 */
+  .el-dialog {
+    --el-dialog-width: 94% !important;
+  }
+
+  /* 404页面 */
+  .error-desc {
+    padding: 80px 20px !important;
+    flex-direction: column;
+    align-items: flex-start !important;
+
+    .error-h1 {
+      font-size: 80px !important;
+    }
+
+    .el-divider {
+      height: 1px !important;
+    }
+
+    .error-p {
+      font-size: 40px !important;
+    }
+  }
 }
