--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -1,25 +1,30 @@
+$mobile-width: 768px;
+
+
+
+
 :root {
-	--el-color-primary: #003cab;
-	--el-border-radius-base: 6px;
-	--el-margin-base: 8px;
+  --el-color-primary: #003cab;
+  --el-border-radius-base: 6px;
+  --el-margin-base: 8px;
 
-	
-	--theme-border-color-light: #f1f2f3;
-	--theme-logo-text-color: var(--el-color-primary);
 
-	--theme-menu-text-color: #333333;
-	--theme-menu-bg-color: #ffffff;
-	--theme-menu-border-color: var(--el-color-primary);
-	--theme-menu-hover-color: var(--el-color-primary);
-	--theme-menu-hover-bg-color: var(--el-color-primary-light-9);
+  --theme-border-color-light: #f1f2f3;
+  --theme-logo-text-color: var(--el-color-primary);
 
-	--theme-header-bg-color: #ffffff;
-	--theme-header-text-color: #444444;
-	--theme-header-hover-color: rgba(0, 0, 0, 0.1);
+  --theme-menu-text-color: #333333;
+  --theme-menu-bg-color: #ffffff;
+  --theme-menu-border-color: var(--el-color-primary);
+  --theme-menu-hover-color: var(--el-color-primary);
+  --theme-menu-hover-bg-color: var(--el-color-primary-light-9);
 
-	--theme-bg-color-secondarycontainer: #f3f3f3;
-	--theme-main-bg-color: #eee;
+  --theme-header-bg-color: #ffffff;
+  --theme-header-text-color: #444444;
+  --theme-header-hover-color: rgba(0, 0, 0, 0.1);
 
-	--theme-header-height: 60px;
-	--el-tabs-header-height: 48px;
+  --theme-bg-color-secondarycontainer: #f3f3f3;
+  --theme-main-bg-color: #eee;
+
+  --theme-header-height: 60px;
+  --el-tabs-header-height: 48px;
 }
